tests/ui/caps_mask_from_tag_reintroduction.rs
fn main() {
    let _ = hibana::substrate::cap::caps_mask_from_tag(0);
}
